--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,16 @@ asgiref==3.2.7
 certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
-cryptography==2.8
+cryptography==3.3.1
 defusedxml==0.6.0
-Django==3.0.6
+Django==3.1.5
 django-templated-mail==1.1.1
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
 djoser==2.0.3
 idna==2.9
 oauthlib==3.1.0
+Pillow==8.1.0
 pycparser==2.20
 Pygments==2.6.1
 PyJWT==1.7.1
